[package]
name = "centipede"
version = "0.2.11"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"

[dependencies.curv]
git = "https://github.com/jirigav/curv"
default-features = false

[dependencies.bulletproof]
git = "https://github.com/jirigav/bulletproofs"
default-features = false

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv/rust-gmp-kzen"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
